<resources>
    <string name="app_name">Data Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_friend_s_birthday">Enter your friend\'s birthday:</string>
    <string name="about">About</string>
    <string name="birthday_result">Your friend\'s birthday is in</string>
    <string name="about_message">Created by Sruli Brach and Jacob Berger. A++</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="night_mode_key">Night Mode</string>
    <string name="display_header">Display</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Use Night/DarkMode</string>
    <string name="night_mode_title">Night Mode</string>
    <string name="unit_key">unit_key</string>
</resources>