<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/night_mode_key"
            app:summaryOff="@string/night_mode_off"
            app:summaryOn="@string/night_mode_on"
            app:title="@string/night_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Unit">
        <ListPreference
            app:key="@string/unit_key"
            app:dialogTitle="Select a unit"
            app:title="Days/Weeks"
            app:defaultValue="Days"
            app:entries="@array/pref_unit_options"
            app:entryValues="@array/pref_unit_values" />

    </PreferenceCategory>



</PreferenceScreen>